--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Siva Lab Assignment"
+rootProject.name = "Murali Lab Assignment"
 include ':app'
